--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,13 @@
         }
     ],
     "autoload": {
-        "psr-4": {"hdvianna\\": "src/"}
+        "psr-4": {"": "src/"}
     },
     "require": {
         "amphp/amp": "^2.2",
-        "amphp/mysql": "^1.1"
+        "amphp/mysql": "^1.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "7"
     }
 }
