--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     },
     "require": {
         "amphp/amp": "^2.2",
-        "amphp/mysql": "^1.2"
+        "amphp/mysql": "^1.2",
+        "php-curl-class/php-curl-class": "^8.6"
     },
     "require-dev": {
         "phpunit/phpunit": "7"
