--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "amphp/amp": "^2.2",
         "amphp/mysql": "^1.2",
-        "php-curl-class/php-curl-class": "^8.6"
+        "php-curl-class/php-curl-class": "^8.6",
+        "amphp/parallel": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "7"
