--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "psr-4": {"": "src/"}
     },
     "require": {
-        "php" : "^7.2"
+        "php" : "^7.2",
+        "ext-curl": "*",
+        "ext-parallel": "*"
     },
     "require-dev": {
     }
