docker image name change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   php:
     build: .
-    image: parallel-workpool-dev
+    image: hdvianna/parallel-workpool-dev
     volumes:
       - .:/var/local/parallel-workpool
     command: >
