--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,7 @@
         "ext-parallel": "*"
     },
     "require-dev": {
+        "phpunit/phpunit": "9.3.8",
+        "pestphp/pest": "^0.3.1"
     }
 }
